<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeAppointment01">

    <TextView
        android:id="@+id/tv_makeAppo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#2196F3"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/tv_makeAppo"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_selectProvince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_selectProvince"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_adminAddHospital"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_makeAppo" />

    <Button
        android:id="@+id/btn_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_central"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintEnd_toStartOf="@+id/btn_eastern"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectProvince" />

    <Button
        android:id="@+id/btn_eastern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_eastern"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_central"
        app:layout_constraintEnd_toStartOf="@+id/btn_northCentral"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_central" />

    <Button
        android:id="@+id/btn_northCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_northCentral"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_eastern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_eastern" />

    <Button
        android:id="@+id/btn_northern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_northern"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintEnd_toStartOf="@+id/btn_northWestern"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_central" />

    <Button
        android:id="@+id/btn_northWestern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_northWestern"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_northern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_northern" />

    <Button
        android:id="@+id/btn_sabaragamuwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sabaragamuwa"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintEnd_toStartOf="@+id/btn_uva"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_northern" />

    <Button
        android:id="@+id/btn_uva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_uva"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_sabaragamuwa"
        app:layout_constraintEnd_toStartOf="@+id/btn_western"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sabaragamuwa" />

    <Button
        android:id="@+id/btn_western"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_western"
        android:textColor="@color/black"
        app:backgroundTint="#D3EBF3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_uva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_uva" />

    <Button
        android:id="@+id/btn_adminAddHospital"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Most Searching Hosptials"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sabaragamuwa" />

    <androidx.cardview.widget.CardView
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Healthy Care Hospital"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address :"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="New Namal Road, Colombo"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact No :"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="011 2425628"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About :"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Best Place"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBookDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="View"
                app:backgroundTint="@android:color/holo_blue_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="New Life Hospital"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address :"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="New Line Street, Colombo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact No :"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="0114586528"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About :"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Best in your area"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="View"
                app:backgroundTint="@android:color/holo_blue_dark" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>